# NEWT64

./: .gitignore  CMakeLists.txt  Newt64Config.cmake  README.md  configure  configure.in
ViewFrame/: view.ns
contrib/contrib.xcodeproj/: project.pbxproj
defs/: newt.2.2.ns  newt.bc.2.2.ns  pkg.ns  test.ns
newt_all.xcodeproj/: project.pbxproj
src/: main.c  version.h  version.h.in
src/newt.xcodeproj/: project.pbxproj
src/newt_core/: NewtBC.c  NewtEnv.c  NewtFile.c  NewtFns.c  NewtGC.c  NewtIO.c  NewtIconv.c  NewtMem.c  NewtNSOF.c  NewtObj.c  NewtParser.c  NewtPkg.c  NewtPrint.c  NewtStr.c  NewtVM.c
src/newt_core/incs/: NewtBC.h  NewtEnv.h  NewtErrs.h  NewtFns.h  NewtIO.h  NewtIconv.h  NewtMem.h  NewtObj.h  NewtParser.h  NewtStr.h  NewtType.h  NewtVM.h  platform.h
src/newt_core/incs/Newton/: Objects.h
src/newt_core/incs/VC6/: config.h
src/newt_core/incs/darwin/: config.h
src/newt_core/incs/win/: config.h
src/parser/: lookup_words.c  newt.l  newt.l.c  newt.y  y.tab.c  y.tab.h
src/utils/: endian_utils.c  endian_utils.h
